# altlinux-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  consts.py  enums.py  essence.py  main.py  parser.py  pyproject.toml  utils.py
