[tool.poetry]
name = "altlinux-cli"
version = "0.1.0"
description = ""
authors = ["Vali Shugaibov <65904112+shugaibov-valy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.11.13"
msgspec = "^0.19.0"
click = "^8.1.8"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
